--- a/6/Dockerfile
+++ b/6/Dockerfile
@@ -1,6 +1,8 @@
-FROM buildpack-deps:bullseye
+FROM buildpack-deps:buster
 
-RUN git clone --depth=1 https://github.com/ImageMagick/ImageMagick6 \
+RUN git clone https://github.com/ImageMagick/ImageMagick6 \
   && cd ImageMagick6 \
+  && git checkout 786f16384 \
   && ./configure \
   && make install
+RUN ldconfig /usr/local/lib
